--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "boxen": "^5.0.1",
     "canvas": "^2.8.0",
     "chalk": "^4.1.1",
+    "compress-images": "^2.0.5",
     "image-data-uri": "^2.0.1",
+    "imagemin": "^8.0.1",
+    "imagemin-jpegtran": "^7.0.0",
     "inquirer": "^3.3.0",
     "merge-images": "^2.0.0",
     "minimist": "^1.2.5",
